[tool.poetry]
name = "pylaunch"
version = "0.1.0"
description = "Python wrapper for the Adobe Launch API."
authors = ["Julien <you@example.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
