[tool.poetry]
name = "pylaunch"
version = "0.1.0"
description = "Python wrapper for the Adobe Launch API."
authors = ["Julien <you@example.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pyjwt = "^1.7.1"
jwt = "^0.6.1"
pandas = "^1.0.1"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
