[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpy"
authors = [
    {name = "Julien Piccini", email = "piccini.julien@gmail.com"},
]
description = "Adobe Launch API wrapper"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["adobe", "analytics", "API", "python"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 4 - Beta"
]
dependencies = ['pandas', 
                "requests",
                "PyJWT", 
                 "PyJWT[crypto]",
                 "pathlib2", 
                 "pathlib"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/pitchmuc/launchpy"
changelog = "https://github.com/pitchmuc/launchpy/blob/master/docs/releases.md"

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
dynamic = ["version"]